fix github link in header

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,8 +10,7 @@ const textLinks: { label: string; href: string }[] = [
 
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
-	{ label: 'GitHub', href: 'https://github.com/shaid/katarina-8th', icon: 'github-logo' },
-	
+	{ label: 'GitHub', href: 'https://github.com/shaid/cosmograph', icon: 'github-logo' },
 ];
 
 const { pageTitle } = Astro.props
